# rustman

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  mockup.html  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  script.rs
core/: Cargo.toml
core/src/: codegen.rs  curl.rs  doc.rs  git.rs  har.rs  http.rs  jsonpath.rs  jsonschema.rs  lib.rs  model.rs  oauth.rs  openapi.rs  perf.rs  postman.rs  report.rs  security.rs  snapshot.rs  storage.rs  test.rs  textdiff.rs  vars.rs
docs/: index.html
server/: Cargo.toml
server/src/: main.rs
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: BatchResults.svelte  CheatSheet.svelte  CommandPalette.svelte  DiffView.svelte  Editor.svelte  FolderConfig.svelte  GraphQL.svelte  LogPanel.svelte  NodoAlbero.svelte  Performance.svelte  Rail.svelte  Response.svelte  RunResults.svelte  Socket.svelte  Splitter.svelte  Strumenti.svelte  Titlebar.svelte
src/lib/: api.js  i18n.svelte.js  layout.svelte.js  log.svelte.js  pm.js  runner.js  settings.svelte.js  versione.js
src/views/: CollectionsView.svelte  EnvironmentsView.svelte  GitView.svelte  HistoryView.svelte  InfoView.svelte  RunView.svelte  SettingsView.svelte  WorkspacesView.svelte
