# Server web: espone il crate `core` via REST e serve il frontend compilato (dist).
# Permette di usare Rustman anche dal browser (Fase 6, opzionale).
[package]
name = "rustman-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustman-server"
path = "src/main.rs"

[dependencies]
rustman-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
