[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Attiva il protocollo custom che serve gli asset incorporati al posto del dev server.
# Senza questa feature un `cargo build` produce un binario in modalità "dev" che
# all'avvio cerca http://localhost:1420. `cargo tauri build` la attiva da sé,
# ma il pacchetto Arch usa `cargo build`: NON RIMUOVERE.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
# La logica vera (HTTP, e in futuro git/test/perf) vive nel crate "core".
rustman-core = { path = "../core" }
